add JavaScript animations

--- a/css/style.css
+++ b/css/style.css
@@ -419,3 +419,65 @@ cite {
 
   background: var(--yellow);
 }
+
+/* ===== Simple Slide - JS ===== */
+/* 5 Adicione o CSS Essencial abaixo */
+.js [data-slide] {
+  position: relative;
+}
+
+.js [data-slide] > * {
+  position: absolute;
+  top: 0px;
+  opacity: 0;
+}
+
+.js [data-slide] > .active {
+  position: relative;
+  opacity: 1;
+  transition: opacity 500ms;
+  z-index: 1;
+}
+
+/* 5 Navegaçao CSS  */
+.js [data-slide-nav] {
+  display: block;
+  text-align: center;
+  margin-top: 20px;
+}
+
+.js [data-slide-nav] button {
+  display: inline-block;
+  width: 12px;
+  height: 12px;
+  margin: 4px;
+  border: none;
+  padding: 0;
+  border-radius: 6px;
+  text-indent: -99px;
+  overflow: hidden;
+
+  background: #1d1d1d;
+}
+
+.js [data-slide-nav] button.active {
+  background: var(--yellow);
+}
+
+/* Simple Anime*/
+
+.js [data-anime] {
+  opacity: 0;
+
+}
+
+.js .fadeInDown {
+  transform: translate3d(0, -20px, 0);
+}
+
+.js .anime {
+  opacity: 1;
+  transform: none;
+  transition: opacity .8s, transform .8s;
+}
+
